Xray module #3 - Finished module
May need some optimizations